--- a/contacto.html
+++ b/contacto.html
@@ -21,9 +21,9 @@
 	<table border="0"; align="center"; bgcolor="#566D7E"; >
 	  <tr>
    	  <td width="185"><a href="index.html" style="text-decoration:none"><strong>Inicio</strong></a></td>
-   	  <td width="185"><a href="funciones.html5" style="text-decoration:none">Funciones disponibles</a></td>
-   	  <td width="185"><a href="testimonios.html5" style="text-decoration:none">Testimonios de usuarios</a></td>
-   	  <td width="185"><a href="contacto.html5" style="text-decoration:none"><I><b>Información de Contacto</b></I></a></td>
+   	  <td width="185"><a href="funciones.html" style="text-decoration:none">Funciones disponibles</a></td>
+   	  <td width="185"><a href="testimonios.html" style="text-decoration:none">Testimonios de usuarios</a></td>
+   	  <td width="185"><a href="contacto.html" style="text-decoration:none"><I><b>Información de Contacto</b></I></a></td>
 	</tr>
 	</table>
 	<br>
