--- a/funciones.html
+++ b/funciones.html
@@ -22,9 +22,9 @@
 	<table border="0"; align="center"; bgcolor="#566D7E"; >
 	  <tr>
    	  <td width="185"><a href="index.html" style="text-decoration:none"><strong>Inicio</strong></a></td>
-   	  <td width="185"><a href="funciones.html5" style="text-decoration:none"><I><b>Funciones Disponibles</b></I></a></td>
-   	  <td width="185"><a href="testimonios.html5" style="text-decoration:none">Testimonios de Usuarios</a></td>
-   	  <td width="185"><a href="contacto.html5" style="text-decoration:none">Información de Contacto</a></td>
+   	  <td width="185"><a href="funciones.html" style="text-decoration:none"><I><b>Funciones Disponibles</b></I></a></td>
+   	  <td width="185"><a href="testimonios.html" style="text-decoration:none">Testimonios de Usuarios</a></td>
+   	  <td width="185"><a href="contacto.html" style="text-decoration:none">Información de Contacto</a></td>
 	</tr>
 	</table>
 	<br>
