--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <title>SmartAuto</title>
     
-    <!-- color para los links -->
+    <!-- *color para los links -->
     <style>a:link {color: White;} a:visited {color: White;} a:hover{color: LightBlue;} </style>
 
 </head>
