--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<table border="0"; align="center"; bgcolor="#566D7E"; >
 	<tr>
    	  <td width="185"><a href="index.html" style="text-decoration:none"><I><b>Inicio</b></I></a></td>
-   	  <td width="185"><a href="funciones.html5" style="text-decoration:none">Funciones disponibles</a></td>
-   	  <td width="185"><a href="testimonios.html5" style="text-decoration:none">Testimonios de usuarios</a></td>
-   	  <td width="185"><a href="contacto.html5" style="text-decoration:none">Información de Contacto</a></td>
+   	  <td width="185"><a href="funciones.html" style="text-decoration:none">Funciones disponibles</a></td>
+   	  <td width="185"><a href="testimonios.html" style="text-decoration:none">Testimonios de usuarios</a></td>
+   	  <td width="185"><a href="contacto.html" style="text-decoration:none">Información de Contacto</a></td>
 	</tr>
 	</table>
 	<br>
