--- a/funciones.html
+++ b/funciones.html
@@ -77,8 +77,7 @@
 		  </tr>
 		  <tr>
 		    <td align="left"; width="150"; height="40";><b>Ventanillas</b></td>
-		    <td align="left"; width="500";> Con el mismo gesto con el que indicamos a un conductor que no
-			tiene las luces puestas, con SmartAuto podremos encender las de nuestro vehículo</td>
+		    <td align="left"; width="500";> Con la mano podemos subir o bajar las ventanillas a la altura deseada indicándolo con la mano</td>
 		  </tr>
 		</table>
 	
